Fix spacing

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -84,7 +84,7 @@
     p {
         font-size: 1.6rem;
         color: var(--softer-white);
-        margin: 1.6rem 0;
+        margin: 1rem 0;
     }
 }
 
